# cli

./: Cargo.toml  readme.md
.github/workflows/: build.yml
src/: commands.rs  main.rs
workflows/: build.yml
