[package]
name = "genauai-cli"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "CLIfor Genau AI"
repository = "https://github.com/genauai/cli"
readme = "readme.md"

[dependencies]
dotenv = "0.15.0"
async-openai = "0.10.3"
tokio = { version = "1.28.0", features = ["full"] }
dialoguer = "0.10.4"
genauai-kernel = {version= "0.0.1", path="../kernel"}
chrono = "0.4.24"
rusqlite = "0.29.0"
rustyline = "11.0.0"
serde = "1.0.160"
serde_json = "1.0.96"
dirs = "5.0.0"